<resources>
    <string name="app_name">CareerUp</string>

    <!--    Register / Login    -->

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="toLogin">Click to Login</string>
    <string name="toRegister">Click to Register</string>

    <string name="logout">Log Out</string>
    <string name="userName">userName</string>

    <!--   Menu     -->

    <string name="search">Search</string>
    <string name="vacanciesandSearch">Search vacancy</string>
    <string name="aboutUs">About Us</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>

    <!-- JobPage -->
    <string name="desc">Description</string>
    <string name="qualific">Qualifications</string>
    <string name="respons">Responsibilities</string>
    <string name="benifits">Benefits</string>

    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id cupiditate
      placeat vitae quis atque quisquam inventore adipisci. Explicabo aut optio
      id odit laudantium inventore. Delectus tempora ea maiores hic adipisci
      placeat nesciunt, sint possimus quas numquam culpa dolor, facere vero
      saepe autem temporibus aliquid similique vitae. Cumque atque sit velit.</string>

    <string name="apply">Apply</string>

    <!-- Пагинация -->
    <string name="prev"> &lt;- </string>
    <string name="next"> -> </string>
    <string name="page">1</string>


    <!-- Вкладка о нас -->
    <string name="aboutCareerUp">About CareerUp</string>
    <string name="aboutUsDesc">CareerUp: Innovating Your Job Search Experience</string>
    <string name="aboutUsDesc1">Created by Kairgeldin Dmitriy and Mukhametzhanova Karina, CareerUp is a groundbreaking mobile application designed to revolutionize the way you search for jobs. The app aggregates job listings from all major employment websites into one convenient platform, saving you time and effort. With CareerUp, you have access to comprehensive information on each job posting and the ability to apply directly through the app.</string>
    <string name="aboutUsDesc2">CareerUp`s user-friendly interface and powerful search capabilities make it easy to find the perfect job that matches your skills and preferences. Stay ahead in your career journey with real-time updates and personalized job recommendations. Whether you are a fresh graduate or an experienced professional, CareerUp streamlines the job search process, making it efficient and stress-free.</string>
    <string name="aboutUsDesc3">Embrace the future of job hunting with CareerUp – where all opportunities meet in one place.</string>
    <string name="helpLink">Helpful links</string>
    <string name="figma">Figma</string>
    <string name="inst">Instagram</string>
    <string name="tg">Telegram</string>
    <string name="webSite">WebSite</string>


    <!-- Вкладка профиля -->
    <string name="nameProfile">Your full name</string>
    <string name="emailProfile">karina@gmial.com</string>
    <string name="passProfile">Change Password:</string>
    <string name="mobileProfile">Mobile:</string>
    <string name="addressProfile">Address:</string>
    <string name="postalCodeProfile">PostalCode:</string>
    <string name="saveProfile">SAVE</string>
    <string name="editProfile">EDIT</string>
    <string name="address">Mangilic El 50</string>
    <string name="postalCode">10001</string>
    <string name="mobile">87010868788</string>

    <!-- История просмотра -->
    <string name="history">History</string>


    <!-- ТОСТЫ -->
    <string name="reauthenticated">User reauthenticated with new password</string>
    <string name="ERreauthenticated">Failed to reauthenticate with new password</string>
    <string name="ERpass">Error updating password</string>
    <string name="ONsaved">Profile saved successfully</string>
    <string name="ERsaved">Failed to save profile</string>
    <string name="ERGettingDataProf">Error getting data profile is empty</string>
    <string name="ERGettingData">Error getting data</string>
    <string name="ERUploadImg">Failed to upload image</string>
    <string name="ERUserProfile">userProfile is null</string>
    <string name="ERPermission">Permission Denied</string>

    <string name="lastPage">This is the last page</string>
    <string name="firstPage">This is the first page</string>

</resources>