<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/vacancies"
            android:icon="@drawable/search_icon"
            android:title="@string/vacanciesandSearch"/>
        <item android:id="@+id/about"
            android:icon="@drawable/book_icon"
            android:title="@string/aboutUs"/>
        <item android:id="@+id/history"
            android:icon="@drawable/history"
            android:title="@string/history"/>
        <item android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/profile"/>
    </group>
    <item android:title="">
        <menu>
            <item android:id="@+id/logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>