<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:fontFamily = "@font/comfortaa"
    android:background="@color/bg"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/register"
        android:layout_marginBottom="48dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:hintTextColor="@color/white"
        app:counterOverflowTextColor="@color/white"
        android:textColorHint="@color/white"
        app:boxCornerRadiusTopStart="15dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        app:hintTextColor="@color/white"
        app:counterOverflowTextColor="@color/white"
        android:textColorHint="@color/white"
        app:boxCornerRadiusTopStart="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:text="@string/register"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/loginNow"
        android:text="@string/toLogin"
        android:textSize="15sp"
        android:textColor="@color/secondGrad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>