<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    android:backgroundTint="@color/job_bg_color"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:layout_marginBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <ImageView
            android:id="@+id/pictureImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/title"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/userName"
            android:textColor="@color/job_title_color"
            android:textSize="20sp"
            />
    </LinearLayout>

        <TextView
            android:id="@+id/companyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="200dp"
            android:fontFamily="@font/comfortaa"
            android:gravity="left"
            android:text="Category"
            android:textColor="@color/white"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">
            <TextView
                android:id="@+id/country"
                android:fontFamily="@font/comfortaa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/city"
                android:fontFamily="@font/comfortaa"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="15sp"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/remote"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textColor="@color/firstGrad"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/jobEmploymentType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/password"
                android:textColor="@color/firstGrad"
                android:textSize="15sp"
                android:layout_marginRight="10dp"
                />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>